# casbin-firestore-adapter

./: BUILD.bazel  Config.go  README.md  WORKSPACE  adapter.go  adapter_test.go  go.mod  go.sum  model.go  model_test.go
